--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,19 +1,13 @@
 LKM             = sgx-step
-PWD            := $(shell pwd)
+KERNEL_BUILD := $(realpath ../../kernel/linux/build/)
 
 obj-m          += $(LKM).o
 $(LKM)-objs     = sgxstep.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C $(KERNEL_BUILD) M=$(PWD) modules
+	$(KERNEL_BUILD)/../scripts/clang-tools/gen_compile_commands.py -d $(KERNEL_BUILD) $(KERNEL_BUILD) .
 
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
-
-unload:
-	sudo rmmod $(LKM).ko || true
-
-load: unload all
-	sudo modprobe -a isgx msr || true
-	sudo insmod $(LKM).ko
-	sudo dmesg | tail
+	make -C $(KERNEL_BUILD) M=$(PWD) clean
+	rm -f compile_commands.json
