--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,5 +1,6 @@
 LKM             = sgx-step
-KERNEL_BUILD := $(realpath ../../kernel/linux/build/)
+# KERNEL_BUILD := $(realpath ../../kernel/linux/build/)
+KERNEL_BUILD := /lib/modules/$(shell uname -r)/build
 
 obj-m          += $(LKM).o
 $(LKM)-objs     = sgxstep.o
@@ -11,3 +12,11 @@ all:
 clean:
 	make -C $(KERNEL_BUILD) M=$(PWD) clean
 	rm -f compile_commands.json
+
+unload:
+	sudo rmmod $(LKM).ko || true
+
+load: unload all
+	sudo modprobe -a isgx msr || true
+	sudo insmod $(LKM).ko
+	sudo dmesg | tail
